@@ -1,3 +1,10 @@
+Mon Apr 21 15:27:21 2003  Ossama Othman  <ossama@dre.vanderbilt.edu>
+
+	* ace/Makefile.am (libACE_Sockets_la_SOURCES, HEADER_FILES):
+	  (INLINE_FILES):
+
+	  Added new SCTP related files to these variables.
+
 Mon Apr 21 15:23:44 2003  Ossama Othman  <ossama@dre.vanderbilt.edu>
 
 	* ace/SSL/Makefile.in:
